// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphNode.vue snapshot initial 1`] = `
<g
  fill="#ddd"
  stroke="black"
  stroke-width="1.2"
  title="make_vector2"
  transform="translate(0, 0)"
>
  <g>
    <path
      d="M0,0L100,0L100,200L0,200z"
      fill="eee"
      stroke="#555"
    />
  </g>
  <text
    fill="#000"
  >
    make_vector2
  </text>
</g>
`;

exports[`src/components/elements/GraphNode.vue snapshot selected 1`] = `
<g
  fill="orange"
  stroke="black"
  stroke-width="1.2"
  title="make_vector2"
  transform="translate(0, 0)"
>
  <g>
    <path
      d="M0,0L100,0L100,200L0,200z"
      fill="eee"
      stroke="#555"
    />
  </g>
  <text
    fill="#000"
  >
    make_vector2
  </text>
</g>
`;
